@@ -66,8 +66,15 @@ module Gem2Deb
 
     def install_gemspec
       if metadata.gemspec
-        ruby_versions.each do |version|
-          target = File.join(destdir(:root), "/usr/share/rubygems-integration/#{RUBY_CONFIG_VERSION[version]}/specifications/#{metadata.name}-#{metadata.version}.gemspec")
+        versions =
+          if metadata.has_native_extensions?
+            ruby_versions.map { |v| RUBY_CONFIG_VERSION[v] }
+          else
+            ['all']
+          end
+        versions.each do |version|
+          target = File.join(destdir(:root), "/usr/share/rubygems-integration/#{version}/specifications/#{metadata.name}-#{metadata.version}.gemspec")
+          puts "generating gemspec at ${target}"
           FileUtils.mkdir_p(File.dirname(target))
           File.open(target, 'w') do |file|
             file.write(metadata.gemspec.to_ruby)
